--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "vt-embedded-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
     "dev": "vite",
     "prepublishOnly": "vite build"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "type": "module",
   "main": "./dist/vtembed.umd.cjs",
   "module": "./dist/vtembed.js",
